# oxidhome

./: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  buf.gen.yaml  buf.yaml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: checks.yaml  publish.yaml  wit-deps.yaml
crates/oxidehome-core/: Cargo.toml
crates/oxidehome-core/src/: main.rs
crates/oxidehome-sdk/: Cargo.toml
crates/oxidehome-sdk/src/: lib.rs
crates/oxidhome-core/: Cargo.toml
crates/oxidhome-core/src/: api.rs  auth.rs  host_impl.rs  lib.rs  main.rs  runtime.rs  state.rs
crates/oxidhome-core/src/api/: auth.rs  bootstrap.rs  connect_rpc.rs  scopes.rs  server.rs
crates/oxidhome-core/src/host_impl/: mod.rs
crates/oxidhome-core/src/runtime/: dispatcher.rs  instance.rs  lifecycle.rs  registry.rs  sandbox.rs  state.rs  watchdog.rs
crates/oxidhome-core/src/state/: auth_token.rs  blobs.rs  db.rs  devices.rs  event_log.rs  events.rs  installed_plugins.rs  kv.rs  log_store.rs  services.rs
crates/oxidhome-core/tests/: api_skeleton.rs  blob_persistence.rs  config_overrides.rs  event_dispatch.rs  event_history.rs  hello_world.rs  instance_lifecycle.rs  instance_registry.rs  instance_restart.rs  instance_tick.rs  log_trace.rs  manifest_loader.rs  sandbox_limits.rs  service_dispatch.rs  service_registry.rs  simulated_switch.rs  storage_persistence.rs  support.rs  watchdog.rs
crates/oxidhome-manifest/: Cargo.toml
crates/oxidhome-manifest/src/: compatibility.rs  config.rs  lib.rs  manifest.rs  network.rs  validate.rs
crates/oxidhome-proto/: Cargo.toml
crates/oxidhome-proto/src/: lib.rs
crates/oxidhome-sdk/: Cargo.toml
crates/oxidhome-sdk/src/: __private.rs  device.rs  host.rs  lib.rs  logging.rs  plugin.rs  service.rs
crates/oxidhome-sdk/src/host/: blobs.rs  config.rs  storage.rs
crates/oxidhome-wit/: Cargo.toml
crates/oxidhome-wit/src/: lib.rs
crates/oxidhome-wit/tests/: compiles.rs
examples/crasher/: Cargo.toml  manifest.toml
examples/crasher/src/: lib.rs
examples/event-recorder/: Cargo.toml  README.md  manifest.toml
examples/event-recorder/src/: lib.rs
examples/fuel-hog/: Cargo.toml  manifest.toml
examples/fuel-hog/src/: lib.rs
examples/hang/: Cargo.toml  manifest.toml
examples/hang/src/: lib.rs
examples/hello-world/: Cargo.toml  README.md  manifest.toml
examples/hello-world/src/: lib.rs
examples/kv-counter/: Cargo.toml  README.md  manifest.toml
examples/kv-counter/src/: lib.rs
examples/service-bouncer/: Cargo.toml  manifest.toml
examples/service-bouncer/src/: lib.rs
examples/service-caller/: Cargo.toml  manifest.toml
examples/service-caller/src/: lib.rs
examples/service-counter/: Cargo.toml  manifest.toml
examples/service-counter/src/: lib.rs
examples/simulated-switch/: Cargo.toml  README.md  manifest.toml
examples/simulated-switch/src/: lib.rs
examples/snapshot-saver/: Cargo.toml  manifest.toml
examples/snapshot-saver/src/: lib.rs
proto/oxidhome/v1/: health.proto
scripts/: install-buf-tools.sh
wit/: deps.toml  oxidhome.wit
