[workspace]
resolver = "3"
members = [
  "crates/oxidhome-core",
  "crates/oxidhome-manifest",
  "crates/oxidhome-sdk",
  "crates/oxidhome-wit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidhome/oxidhome"
homepage = "https://github.com/oxidhome/oxidhome"
authors = ["The OxidHome Contributors"]

[workspace.lints.rust]
# `unsafe` is denied by default. Crates and individual blocks may opt in
# with `#[allow(unsafe_code)]`, but every such use must be documented with
# a `// SAFETY:` comment justifying it. See CONTRIBUTING.md for the policy.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
oxidhome-manifest = { path = "crates/oxidhome-manifest", version = "0.1.0" }
oxidhome-sdk = { path = "crates/oxidhome-sdk", version = "0.1.0" }
oxidhome-wit = { path = "crates/oxidhome-wit", version = "0.1.0" }

# Shared external deps.
anyhow = "1.0.102"
ipnet = { version = "2.12.0", default-features = false, features = ["serde", "std"] }
# SQLite via `rusqlite` with `bundled` — pulls the upstream SQLite C
# sources into the crate build so we don't depend on a system libsqlite
# (consistent build/cross-compile story for the Pi / ARM-NAS targets the
# OS supports). The Phase-5a KV store + the Phase-5b/c/d additions all
# go through this one dep. WAL mode is enabled in `state::db`.
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
semver = { version = "1.0.28", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
# `serde_json` is the bridge between the WIT `value` variant and arbitrary
# `T: DeserializeOwned` config values: the SDK's `host::config::get_typed`
# constructs a `serde_json::Value` from whatever the host returned and
# then deserializes. `default-features = false` strips the std dep paths
# we don't use here; the `std` feature is on so plugin authors get the
# normal `serde_json` API.
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "sync", "fs"] }
toml = { version = "1.1.2", default-features = false, features = ["display", "parse", "serde", "std"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "registry"] }

# Phase 12 — external HTTP/WS API. axum on top of tokio + tower; only
# the host (`oxidhome-core`) depends on it. `tower` is pulled in for
# the auth middleware. `sha2` hashes the high-entropy random tokens
# at rest (argon2 would be overengineering for 256-bit random secrets
# — argon2's slow KDF is for low-entropy passwords). `rand` generates
# the secrets themselves.
axum = { version = "0.8.7", default-features = false, features = ["http1", "json", "tokio", "ws"] }
rand = { version = "0.9.2", default-features = false, features = ["os_rng", "std", "std_rng"] }
sha2 = { version = "0.11.0", default-features = false }
tower = { version = "0.5.3", default-features = false, features = ["util"] }
