[workspace]
resolver = "3"
members = [
  "crates/oxidhome-core",
  "crates/oxidhome-manifest",
  "crates/oxidhome-proto",
  "crates/oxidhome-sdk",
  "crates/oxidhome-wit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidhome/oxidhome"
homepage = "https://github.com/oxidhome/oxidhome"
authors = ["The OxidHome Contributors"]

[workspace.lints.rust]
# `unsafe` is denied by default. Crates and individual blocks may opt in
# with `#[allow(unsafe_code)]`, but every such use must be documented with
# a `// SAFETY:` comment justifying it. See CONTRIBUTING.md for the policy.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
oxidhome-manifest = { path = "crates/oxidhome-manifest", version = "0.1.0" }
oxidhome-proto = { path = "crates/oxidhome-proto", version = "0.1.0" }
oxidhome-sdk = { path = "crates/oxidhome-sdk", version = "0.1.0" }
oxidhome-wit = { path = "crates/oxidhome-wit", version = "0.1.0" }

# Shared external deps.
anyhow = "1.0.102"
ipnet = { version = "2.12.0", default-features = false, features = ["serde", "std"] }
# SQLite via `rusqlite` with `bundled` — pulls the upstream SQLite C
# sources into the crate build so we don't depend on a system libsqlite
# (consistent build/cross-compile story for the Pi / ARM-NAS targets the
# OS supports). The Phase-5a KV store + the Phase-5b/c/d additions all
# go through this one dep. WAL mode is enabled in `state::db`.
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
semver = { version = "1.0.28", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
# `serde_json` is the bridge between the WIT `value` variant and arbitrary
# `T: DeserializeOwned` config values: the SDK's `host::config::get_typed`
# constructs a `serde_json::Value` from whatever the host returned and
# then deserializes. `default-features = false` strips the std dep paths
# we don't use here; the `std` feature is on so plugin authors get the
# normal `serde_json` API.
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "sync", "fs"] }
toml = { version = "1.1.2", default-features = false, features = ["display", "parse", "serde", "std"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "registry"] }

# Phase 12 — external HTTP/WS API. axum on top of tokio + tower; only
# the host (`oxidhome-core`) depends on it. `tower` is pulled in for
# the auth middleware. `sha2` hashes the high-entropy random tokens
# at rest (argon2 would be overengineering for 256-bit random secrets
# — argon2's slow KDF is for low-entropy passwords). `rand` generates
# the secrets themselves.
# `axum` features kept minimal. `ws` re-enabled in 12-API-c with
# the `events/tail` WebSocket endpoint (pulls in
# `tokio-tungstenite` + `tungstenite` + `sha1`).
axum = { version = "0.8.7", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
# Already pulled in transitively by `axum`'s `ws` feature; lifting it
# to a workspace dep lets the WS integration test in 12-API-e drive
# a real round-trip client without dragging a second copy into the
# dep graph.
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect"] }

# Connect RPC. Generated code lives in `oxidhome-proto`;
# `oxidhome-core` mounts a `connectrpc::Router` into the existing
# axum app via `into_axum_service()` so both protocols share one
# listener. Versions pinned exact to keep the regen output (checked
# in under `crates/oxidhome-proto/src/gen/`) reproducible. Bumps
# must touch both the runtime pin here and the codegen pin in
# `scripts/install-buf-tools.sh` together.
connectrpc = { version = "=0.7.0", default-features = false, features = ["axum", "server"] }
# `buffa` is the message-codegen runtime the generated code links
# against. The Connect runtime (`connectrpc`) carries its own
# transitive pin; this one keeps the generated message types in
# sync with the version `protoc-gen-buffa` produced.
buffa = { version = "=0.8.1", default-features = false, features = ["json"] }
# Pulled in transitively (axum / tokio-tungstenite); lifted to a
# workspace dep so the WS round-trip test in 12-API-e can call
# `.next()` / `.send()` / `.close()` on the `WebSocketStream` (those
# methods come from `futures-util`'s `StreamExt` / `SinkExt`).
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
# `rand` and `sha2` versions match what wasmtime / wasmtime-wasi
# pull in transitively so the dep graph contains exactly one copy
# of each. Bumping our pin past wasmtime's would double-count both
# crates in the binary.
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng", "sys_rng"] }
sha2 = { version = "0.10.9", default-features = false }
tower = { version = "0.5.3", default-features = false, features = ["util"] }
