[package]
name = "oxidehome-core"
description = "OxidHome host runtime — loads WASM component plugins and exposes the device/event/media APIs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
