[package]
name = "oxidhome-core"
description = "OxidHome host runtime — loads WASM component plugins and exposes the device/event/media APIs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
# `oxidhome-core`'s host bindgen reads `wit/` at the workspace root, which
# the published tarball can't see (`path: "../../wit"` escapes the crate
# root). Keeping `publish = false` for 0.x sidesteps the packaging problem
# until the first SDK release for external plugin authors — at which point
# we either bundle `wit/` into the package via `package.include`, or pre-
# generate Rust source. See the publication-policy note in ARCHITECTURE.md
# "Implementation decisions".
publish = false
# Integration tests are listed explicitly below so cargo doesn't
# auto-pick `tests/support.rs` as a no-op test target. `support.rs`
# is a shared helper module pulled in by each test via `#[path]`.
autotests = false

[lints]
workspace = true

[[test]]
name = "hello_world"
path = "tests/hello_world.rs"

[[test]]
name = "simulated_switch"
path = "tests/simulated_switch.rs"

[[test]]
name = "event_dispatch"
path = "tests/event_dispatch.rs"

[[test]]
name = "manifest_loader"
path = "tests/manifest_loader.rs"

[[test]]
name = "config_overrides"
path = "tests/config_overrides.rs"

[dependencies]
# Pinned exactly. Wasmtime's component-model API surface evolves; we want
# silent minor bumps to be deliberate. Bumps land as their own PR. Mirrors
# the `wit-bindgen` pin policy in oxidhome-wit.
#
# `wasmtime-wasi-http` joins this list in Phase 8 when streaming plugins
# need outgoing HTTP. Phase 2 wires `wasmtime-wasi`'s p2 (clocks, io, cli,
# random, …) so libstd-pulled WASI imports resolve.
wasmtime = { version = "=44.0.1", default-features = false, features = [
  "runtime",
  "component-model",
  "async",
  "cranelift",
  "std",
  # `anyhow` here flips on `From<wasmtime::Error> for anyhow::Error` so
  # the host-runtime `?` plumbing keeps working with `anyhow::Result`.
  "anyhow",
] }
wasmtime-wasi = { version = "=44.0.1", default-features = false, features = ["p2"] }
anyhow.workspace = true
oxidhome-manifest.workspace = true
semver.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "fs"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry"] }
