[package]
name = "oxidhome-core"
description = "OxidHome host runtime — loads WASM component plugins and exposes the device/event/media APIs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
# `oxidhome-core`'s host bindgen reads `wit/` at the workspace root, which
# the published tarball can't see (`path: "../../wit"` escapes the crate
# root). Keeping `publish = false` for 0.x sidesteps the packaging problem
# until the first SDK release for external plugin authors — at which point
# we either bundle `wit/` into the package via `package.include`, or pre-
# generate Rust source. See the publication-policy note in ARCHITECTURE.md
# "Implementation decisions".
publish = false
# Integration tests are listed explicitly below so cargo doesn't
# auto-pick `tests/support.rs` as a no-op test target. `support.rs`
# is a shared helper module pulled in by each test via `#[path]`.
autotests = false

[lints]
workspace = true

[[test]]
name = "hello_world"
path = "tests/hello_world.rs"

[[test]]
name = "simulated_switch"
path = "tests/simulated_switch.rs"

[[test]]
name = "event_dispatch"
path = "tests/event_dispatch.rs"

[[test]]
name = "manifest_loader"
path = "tests/manifest_loader.rs"

[[test]]
name = "config_overrides"
path = "tests/config_overrides.rs"

[[test]]
name = "storage_persistence"
path = "tests/storage_persistence.rs"

[[test]]
name = "event_history"
path = "tests/event_history.rs"

[[test]]
name = "log_trace"
path = "tests/log_trace.rs"

[[test]]
name = "blob_persistence"
path = "tests/blob_persistence.rs"

[[test]]
name = "instance_tick"
path = "tests/instance_tick.rs"

[[test]]
name = "instance_lifecycle"
path = "tests/instance_lifecycle.rs"

[[test]]
name = "instance_restart"
path = "tests/instance_restart.rs"

[[test]]
name = "instance_registry"
path = "tests/instance_registry.rs"

[[test]]
name = "watchdog"
path = "tests/watchdog.rs"

[[test]]
name = "service_registry"
path = "tests/service_registry.rs"

[[test]]
name = "service_dispatch"
path = "tests/service_dispatch.rs"

[[test]]
name = "api_skeleton"
path = "tests/api_skeleton.rs"

[dependencies]
# Pinned exactly. Wasmtime's component-model API surface evolves; we want
# silent minor bumps to be deliberate. Bumps land as their own PR. Mirrors
# the `wit-bindgen` pin policy in oxidhome-wit.
#
# `wasmtime-wasi-http` joins this list in Phase 8 when streaming plugins
# need outgoing HTTP. Phase 2 wires `wasmtime-wasi`'s p2 (clocks, io, cli,
# random, …) so libstd-pulled WASI imports resolve.
wasmtime = { version = "=45.0.2", default-features = false, features = [
  "runtime",
  "component-model",
  "async",
  "cranelift",
  "std",
  # `anyhow` here flips on `From<wasmtime::Error> for anyhow::Error` so
  # the host-runtime `?` plumbing keeps working with `anyhow::Result`.
  "anyhow",
] }
wasmtime-wasi = { version = "=45.0.2", default-features = false, features = ["p2"] }
anyhow.workspace = true
oxidhome-manifest.workspace = true
rusqlite.workspace = true
semver.workspace = true
# `serde` + `serde_json` carry the on-disk KV encoding (tagged enum →
# JSON BLOB) — see `state::kv::StoredValue`. Postcard-style compact
# encoding can drop in later without a schema migration: the store
# treats values as opaque bytes.
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "fs", "net", "time"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry"] }

# Phase 12 — external HTTP/WS API.
axum.workspace = true
rand.workspace = true
sha2.workspace = true
tower.workspace = true
