[package]
name = "oxidhome-manifest"
description = "OxidHome plugin manifest format — TOML schema, validator, user-override merge, and SDK version compatibility check."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
# Path-depends on no other workspace crates today, but the cross-cutting
# 0.x publication policy (see ARCHITECTURE.md "Implementation decisions")
# keeps every workspace crate unpublished until the first SDK release
# intended for external plugin authors. Lifted together with the rest.
publish = false

[lints]
workspace = true

[dependencies]
ipnet.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
