[package]
name = "oxidhome-sdk"
description = "OxidHome plugin SDK — types and helpers for authoring WASM component plugins in Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
# `oxidhome-sdk` depends on the internal `oxidhome-wit` crate; cargo can't
# publish a crate that path-depends on an unpublished one. Both stay
# unpublished through 0.x and flip publishable together at the first SDK
# release intended for external plugin authors. See the publication-policy
# note in ARCHITECTURE.md "Implementation decisions".
publish = false

[lints]
workspace = true

[dependencies]
oxidhome-wit.workspace = true
# Re-exported so plugin authors can use `oxidhome_sdk::tracing::info!` etc.
# without adding tracing as a direct dep. Pinned at workspace level.
tracing.workspace = true
# `host::config::get_typed::<T: DeserializeOwned>` deserializes whatever
# the host returned from `host-config::get-config` into the plugin's own
# type. The WIT `value` variant is mapped through `serde_json::Value` so
# both primitives and `json-val`-encoded structured payloads work.
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
