# Standalone workspace so the example builds for `wasm32-wasip2` without
# pulling the host (`oxidhome-core`) into the wasm build graph. Mirrors
# the layout used by the other examples; each carries its own
# `Cargo.lock` since path-back-into-parent crates aren't reachable for
# external plugin authors.
[workspace]
resolver = "3"
members = ["."]

[package]
name = "service-counter"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
publish = false
description = "OxidHome example plugin: registers a counter service (Phase 7 services fixture)."

[lib]
crate-type = ["cdylib"]

[dependencies]
oxidhome-sdk = { path = "../../crates/oxidhome-sdk" }

[lints.rust]
unsafe_code = "deny"
