[workspace]
resolver = "3"
members = ["."]

[package]
name = "simulated-switch"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
publish = false
description = "OxidHome example plugin: a software-only switch that registers a device, toggles state on command, and publishes state-changed events."

[lib]
crate-type = ["cdylib"]

[dependencies]
oxidhome-sdk = { path = "../../crates/oxidhome-sdk" }

[lints.rust]
unsafe_code = "deny"
